Resolves: tdf#150307 Broadcast missing ScAreasChanged hint on sheet deletion

... and Undo.

Change-Id: I59413d5470294c415c51e7d7ada9134f4173c872
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139450
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins