sc/source/ui/undo/undotab.cxx
@@ -363,6 +363,7 @@ void ScUndoDeleteTab::Undo()
     }
     SfxApplication* pSfxApp = SfxGetpApp();                                // Navigator
     pSfxApp->Broadcast( SfxHint( SfxHintId::ScTablesChanged ) );
+    pSfxApp->Broadcast( SfxHint( SfxHintId::ScAreasChanged ) );
     pSfxApp->Broadcast( SfxHint( SfxHintId::ScDbAreasChanged ) );
     pSfxApp->Broadcast( SfxHint( SfxHintId::ScAreaLinksChanged ) );
 
